llvm/dev/assign.llvm.bc.err
/Users/cmk/llvm/bin/llvm-as: llvm/dev/assign.llvm:1:1: error: expected top-level entity
LogError: Unknown variable name
^
